# lfm-coder

./: .gitignore  AGENTS.md  README.md  pyproject.toml  training_config.toml
.github/workflows/: publish.yml  tests.yml
openspec/changes/archive/2026-04-24-add-evaluation-module/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-24-add-evaluation-module/specs/evaluation-checkpointing/: spec.md
openspec/changes/archive/2026-04-24-add-evaluation-module/specs/openai-compatible-evaluation/: spec.md
openspec/changes/archive/2026-04-24-add-evaluation-module/specs/transformers-evaluation/: spec.md
openspec/changes/archive/2026-04-27-add-training-module/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-27-add-training-module/specs/grpo-training/: spec.md
openspec/changes/archive/2026-04-27-add-training-module/specs/training-config/: spec.md
openspec/changes/archive/2026-04-27-add-training-module/specs/transformers-evaluation/: spec.md
openspec/specs/evaluation-checkpointing/: spec.md
openspec/specs/openai-compatible-evaluation/: spec.md
openspec/specs/transformers-evaluation/: spec.md
scripts/: benchmark_plot.py  fetch_mapping.py  merge_adapter.py  openai_compatible_evals.py  verify_concurrent_execution.py  verify_synchronous_execution.py
src/lfm_coder/: device.py  logging_utils.py  sandbox.py
src/lfm_coder/datasets/: data.py  eval_data.py  training_data.py
src/lfm_coder/evals/: __init__.py  eval.py  openai_evaluator.py  transformers_evaluator.py  types.py
src/lfm_coder/rewards/: __init__.py  helpers.py  utils.py
src/lfm_coder/sandbox/: Dockerfile.sandbox  __init__.py  docker_sandbox.py  module_mapping.json  monty_sandbox.py  pooled_docker_sandbox.py  sandbox.py  types.py  utils.py
src/lfm_coder/train/: __main__.py  config.py  rewards.py  trainer.py
tests/: test_docker_sandbox.py  test_eval.py  test_helpers.py  test_monty_sandbox.py  test_pool_docker_sandbox.py  test_reward_utils.py  test_sandbox.py  test_training_rewards.py
