[project]
name = "lfm-coder"
version = "0.1.0"
description = "Using GRPO with RLVR, train Liquid AI's LFM2.5-instruct model to enhance coding capabilities"
readme = "README.md"
authors = [{ name = "Ryan Parker" }]
requires-python = ">=3.13"
dependencies = [
    # Quantized training
    "bitsandbytes>=0.49.2",
    # Loading HuggingFace datasets for training and evaluation
    "datasets>=4.6.1",
    # HTTP client for async evaluation on OpenAI-compatible endpoints
    "httpx>=0.28.1",
    # Faster model training through optimized Triton kernels
    "liger-kernel>=0.7.0",
    # Sandboxing model-generated Python code
    "pydantic-monty>=0.0.15",
    # Progress bars
    "tqdm>=4.67.3",
    # Tracking experiments (native integration with TRL)
    "trackio[gpu,spaces]>=0.18.0",
    # Transformers-based RL training with QLoRA
    "trl[peft]>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.5",
    "ty>=0.0.30",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "src/lfm_coder/sandbox/Dockerfile.sandbox",
    "src/lfm_coder/sandbox/module_mapping.json",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
]

[tool.ruff.format]
# "preview" enables Markdown file formatting
preview = true
docstring-code-format = true
docstring-code-line-length = 72
