[project]
name = "lfm-coder"
version = "0.1.2"
description = "Using GRPO with RLVR, fine-tune LLMs to enhance coding capabilities"
readme = "README.md"
authors = [{ name = "Ryan Parker" }]
requires-python = ">=3.13"
dependencies = [
    # Loading HuggingFace datasets for training and evaluation
    "datasets>=4.6.1",
    # HTTP client for async evaluation on OpenAI-compatible endpoints
    "httpx>=0.28.1",
    # Data validation
    "pydantic>=2.13.3",
    # Sandboxing model-generated Python code
    "pydantic-monty>=0.0.15",
    # Progress bars
    "tqdm>=4.67.3",
    # Tracking experiments (native integration with TRL)
    "trackio[spaces]>=0.18.0",
    "trackio[gpu]>=0.18.0; sys_platform == 'linux'",
    # Transformers-based RL training. CUDA-only extras (liger-kernel, bitsandbytes)
    # are gated to Linux because they pull triton, which has no macOS wheels.
    "trl[peft]>=0.29.0",
    "trl[liger,quantization]>=0.29.0; sys_platform == 'linux'",
    # CLI framework for the training module
    "typer>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/rparkr/lfm-coder"
Repository = "https://github.com/rparkr/lfm-coder"

[project.scripts]
lfm-coder = "lfm_coder.train.__main__:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.5",
    "ty>=0.0.30",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "src/lfm_coder/sandbox/Dockerfile.sandbox",
    "src/lfm_coder/sandbox/module_mapping.json",
    "training_config.toml",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
]

[tool.ruff.format]
# "preview" enables Markdown file formatting
preview = true
docstring-code-format = true
docstring-code-line-length = 72
